--- a/css/styles.css
+++ b/css/styles.css
@@ -113,11 +113,6 @@ letter-spacing: 0.06em;
 cursor: pointer; 
 
 background-color: rgba(33, 150, 243, 1);
-position: absolute;
-width: 200px;
-height: 50px;
-left: 700px;
-top: 430px;
 justify-content: space-around;}
 
 .text-button:hover,
@@ -289,8 +284,7 @@ line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;}
 
-.employee-fourth {position: absolute;
-    
+.employee-fourth {    
 background: url(2968.jpg);
 border-radius: 0px;}
 
